# mathm-chess

./: Cargo.toml  README.md
chess-engine/: Cargo.toml
chess-engine/src/: board.rs  decider.rs  error.rs  game.rs  lib.rs  piece.rs  tests.rs  util.rs
chess-engine/src/board/: fen.rs
chess-engine/src/piece/: bishop.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs  util.rs
gui/: Cargo.toml
gui/src/: client  client.rs  main.rs  server.rs
termapp/: Cargo.toml
termapp/src/: main.rs
